updated about and cleaned up comments

--- a/index.html
+++ b/index.html
@@ -155,32 +155,10 @@
                         Thank you for taking the time to visit my website. 
                         I currently work as a Software Engineer in the defense space. 
                         My interests span over Film, Farm, and Fem Tech. 
-                        If you'd like to reach out to me for a programming project or an aimless photography excursion, feel free to email at the contact provided in the section below 
+                        If you'd like to reach out to me for a programming project or an aimless photography excursion, feel free to email at the contact provided in the section below!
                   </div>
             </section>
 
-            <!-- $Team section-->
-      <!--       <section class="team" id="team">
-                  <div class="team__inner">
-                        <h2 class="team__title">About</h2>
-                        <p class="team__descr">Priya Bhatnagar</p>
-       
-                        
-                        <div class="portfolio-containter">
-                              <img src="build/static/images/about.png">
-                              <div class="team__member-info">
-                              <div>
-                                    <h3 class="team__member-name">Priya</h3>
-                                    <p class="team__member-descr">
-                                    <p>
-                                    I like the one song on Nick and Norah's Infinite Playlist that everyone else hates 
-                                    </p>
-                              </div>
-                        </div>
-                  </div>
-            </section> -->
-
-            <!-- $Contact section-->
             <section class="contact" id="contact">
                   <div class="contact__inner">
                         <h2 class="contact__title">Contact</h2>
