--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="build/static/css/screen.min.css">
-      <link rel="stylesheet" href="build/static/css/custom.min.css">
+      <!-- <link rel="stylesheet" href="build/static/css/custom.min.css"> -->
 </head>
 <body>
 
@@ -118,6 +118,6 @@
                   </div>
             </footer>
       </div>
-      <script src="build/static/js/body.min.js"></script>
+      <!-- <script src="build/static/js/body.min.js"></script> -->
 </body>
 </html>
